welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:19: error: missing arguments for method hunt in class SlugSnail;
follow this method with `_' if you want to treat it as a partially applied function
  	hunt
        ^